Added a simple Java servlet

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
+  <servlet>
+    <servlet-name>example</servlet-name>
+    <servlet-class>net.broker.food.servlet.ExampleServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>example</servlet-name>
+    <url-pattern>/example.html</url-pattern>
+  </servlet-mapping>
 </web-app>
